tests/fail/enum_tuple.stderr
error: Unsupported shape `unnamed fields`. Expected no fields.
 --> tests/fail/enum_tuple.rs:3:10
  |
3 | #[derive(Variants)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Variants` (in Nightly builds, run with -Z macro-backtrace for more info)
